src/syntactic.output
Grammar

    0 $accept: begin $end

    1 begin: program

    2 program: program declaration
    3        | error
    4        | %empty

    5 declaration: varDecl
    6            | funcDecl

    7 varDecl: TYPE varList ';'
    8        | TYPE error

    9 varList: varList ',' new_id
   10        | new_id

   11 new_id: ID

   12 $@1: %empty

   13 $@2: %empty

   14 funcDecl: TYPE ID $@1 arguments $@2 '{' funcBody '}'

   15 arguments: '(' ')'
   16          | '(' argsList ')'
   17          | '(' error ')'

   18 argsList: argsList ',' arg
   19         | arg

   20 arg: TYPE ID

   21 funcBody: %empty
   22         | funcBody varDecl
   23         | funcBody stmt

   24 stmt: exprStmt
   25     | returnStmt
   26     | iterStmt
   27     | condStmt

   28 iterStmt: FOR '(' exprStmt exprStmt ')' prepareScope body
   29         | FOR '(' exprStmt exprStmt expression ')' prepareScope body
   30         | FORALL '(' simpleExpr ')' prepareScope body
   31         | FORALL '(' error ')' prepareScope body
   32         | FOR '(' error ')' prepareScope body

   33 body: '{' funcBody '}'
   34     | stmt
   35     | varDecl
   36     | funcDecl

   37 condStmt: IF cond prepareScope body

   38 $@3: %empty

   39 condStmt: IF cond prepareScope body ELSE $@3 prepareScope body

   40 prepareScope: %empty

   41 cond: '(' expression ')'
   42     | '(' error ')'

   43 returnStmt: RETURN exprStmt

   44 exprStmt: expression ';'
   45         | error
   46         | ';'

   47 expression: assign
   48           | inExpr
   49           | outExpr
   50           | simpleExpr

   51 assign: var '=' simpleExpr

   52 var: ID

   53 inExpr: READ '(' var ')'

   54 outExpr: WRITE '(' output ')'
   55        | WRITELN '(' output ')'

   56 output: simpleExpr
   57       | CHAR
   58       | STRING

   59 simpleExpr: simpleExpr IN conjExpr
   60           | conjExpr

   61 conjExpr: conjExpr CONJ disjExpr
   62         | disjExpr

   63 disjExpr: disjExpr DISJ compExpr
   64         | compExpr

   65 compExpr: compExpr COMP relExpr
   66         | relExpr

   67 relExpr: relExpr RELOP artExpr1
   68        | artExpr1

   69 artExpr1: artExpr1 ARTOP1 artExpr2
   70         | artExpr2

   71 artExpr2: artExpr2 ARTOP2 negExpr
   72         | negExpr

   73 negExpr: NEG negExpr
   74        | minusFactor

   75 minusFactor: ARTOP1 factor
   76            | factor

   77 factor: ID
   78       | '(' simpleExpr ')'
   79       | constant
   80       | call
   81       | IS_SET '(' factor ')'
   82       | EXISTS '(' simpleExpr ')'
   83       | SETOP '(' simpleExpr ')'

   84 constant: INTEGER
   85         | FLOAT
   86         | EMPTY

   87 $@4: %empty

   88 call: var $@4 '(' params ')'

   89 params: %empty
   90       | paramList

   91 paramList: paramList ',' simpleExpr
   92          | simpleExpr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15 16 17 28 29 30 31 32 41 42 53 54 55 78 81 82 83 88
    ')' (41) 15 16 17 28 29 30 31 32 41 42 53 54 55 78 81 82 83 88
    ',' (44) 9 18 91
    ';' (59) 7 44 46
    '=' (61) 51
    '{' (123) 14 33
    '}' (125) 14 33
    error (256) 3 8 17 31 32 42 45
    TYPE <ival> (258) 7 8 14 20
    RELOP <ival> (259) 67
    COMP <ival> (260) 65
    SETOP <ival> (261) 83
    ARTOP1 <ival> (262) 69 75
    ARTOP2 <ival> (263) 71
    ID <sval> (264) 11 14 20 52 77
    IF (265) 37 39
    ELSE (266) 39
    FOR (267) 28 29 32
    RETURN (268) 43
    FORALL (269) 30 31
    IN (270) 59
    IS_SET (271) 81
    EXISTS (272) 82
    DISJ (273) 63
    CONJ (274) 61
    NEG (275) 73
    READ (276) 53
    WRITE (277) 54
    WRITELN (278) 55
    INTEGER <ival> (279) 84
    FLOAT <fval> (280) 85
    STRING <sval> (281) 58
    CHAR <sval> (282) 57
    EMPTY (283) 86
    THEN (284)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    begin (38)
        on left: 1
        on right: 0
    program <tnode> (39)
        on left: 2 3 4
        on right: 1 2
    declaration <tnode> (40)
        on left: 5 6
        on right: 2
    varDecl <tnode> (41)
        on left: 7 8
        on right: 5 22 35
    varList <tnode> (42)
        on left: 9 10
        on right: 7 9
    new_id <tnode> (43)
        on left: 11
        on right: 9 10
    funcDecl <tnode> (44)
        on left: 14
        on right: 6 36
    $@1 (45)
        on left: 12
        on right: 14
    $@2 (46)
        on left: 13
        on right: 14
    arguments <tnode> (47)
        on left: 15 16 17
        on right: 14
    argsList <tnode> (48)
        on left: 18 19
        on right: 16 18
    arg <tnode> (49)
        on left: 20
        on right: 18 19
    funcBody <tnode> (50)
        on left: 21 22 23
        on right: 14 22 23 33
    stmt <tnode> (51)
        on left: 24 25 26 27
        on right: 23 34
    iterStmt <tnode> (52)
        on left: 28 29 30 31 32
        on right: 26
    body <tnode> (53)
        on left: 33 34 35 36
        on right: 28 29 30 31 32 37 39
    condStmt <tnode> (54)
        on left: 37 39
        on right: 27
    $@3 (55)
        on left: 38
        on right: 39
    prepareScope (56)
        on left: 40
        on right: 28 29 30 31 32 37 39
    cond <tnode> (57)
        on left: 41 42
        on right: 37 39
    returnStmt <tnode> (58)
        on left: 43
        on right: 25
    exprStmt <tnode> (59)
        on left: 44 45 46
        on right: 24 28 29 43
    expression <tnode> (60)
        on left: 47 48 49 50
        on right: 29 41 44
    assign <tnode> (61)
        on left: 51
        on right: 47
    var <tnode> (62)
        on left: 52
        on right: 51 53 88
    inExpr <tnode> (63)
        on left: 53
        on right: 48
    outExpr <tnode> (64)
        on left: 54 55
        on right: 49
    output <tnode> (65)
        on left: 56 57 58
        on right: 54 55
    simpleExpr <tnode> (66)
        on left: 59 60
        on right: 30 50 51 56 59 78 82 83 91 92
    conjExpr <tnode> (67)
        on left: 61 62
        on right: 59 60 61
    disjExpr <tnode> (68)
        on left: 63 64
        on right: 61 62 63
    compExpr <tnode> (69)
        on left: 65 66
        on right: 63 64 65
    relExpr <tnode> (70)
        on left: 67 68
        on right: 65 66 67
    artExpr1 <tnode> (71)
        on left: 69 70
        on right: 67 68 69
    artExpr2 <tnode> (72)
        on left: 71 72
        on right: 69 70 71
    negExpr <tnode> (73)
        on left: 73 74
        on right: 71 72 73
    minusFactor <tnode> (74)
        on left: 75 76
        on right: 74
    factor <tnode> (75)
        on left: 77 78 79 80 81 82 83
        on right: 75 76 81
    constant <tnode> (76)
        on left: 84 85 86
        on right: 79
    call <tnode> (77)
        on left: 88
        on right: 80
    $@4 (78)
        on left: 87
        on right: 88
    params <tnode> (79)
        on left: 89 90
        on right: 88
    paramList <tnode> (80)
        on left: 91 92
        on right: 90 91


State 0

    0 $accept: . begin $end

    error  shift, and go to state 1

    $end  reduce using rule 4 (program)
    TYPE  reduce using rule 4 (program)

    begin    go to state 2
    program  go to state 3


State 1

    3 program: error .

    $end  reduce using rule 3 (program)
    TYPE  reduce using rule 3 (program)


State 2

    0 $accept: begin . $end

    $end  shift, and go to state 4


State 3

    1 begin: program .
    2 program: program . declaration

    TYPE  shift, and go to state 5

    $end  reduce using rule 1 (begin)

    declaration  go to state 6
    varDecl      go to state 7
    funcDecl     go to state 8


State 4

    0 $accept: begin $end .

    $default  accept


State 5

    7 varDecl: TYPE . varList ';'
    8        | TYPE . error
   14 funcDecl: TYPE . ID $@1 arguments $@2 '{' funcBody '}'

    error  shift, and go to state 9
    ID     shift, and go to state 10

    varList  go to state 11
    new_id   go to state 12


State 6

    2 program: program declaration .

    $end  reduce using rule 2 (program)
    TYPE  reduce using rule 2 (program)


State 7

    5 declaration: varDecl .

    $end  reduce using rule 5 (declaration)
    TYPE  reduce using rule 5 (declaration)


State 8

    6 declaration: funcDecl .

    $end  reduce using rule 6 (declaration)
    TYPE  reduce using rule 6 (declaration)


State 9

    8 varDecl: TYPE error .

    $end  reduce using rule 8 (varDecl)
    TYPE  reduce using rule 8 (varDecl)


State 10

   11 new_id: ID .
   14 funcDecl: TYPE ID . $@1 arguments $@2 '{' funcBody '}'

    ';'  reduce using rule 11 (new_id)
    ','  reduce using rule 11 (new_id)
    '('  reduce using rule 12 ($@1)

    $@1  go to state 13


State 11

    7 varDecl: TYPE varList . ';'
    9 varList: varList . ',' new_id

    ';'  shift, and go to state 14
    ','  shift, and go to state 15


State 12

   10 varList: new_id .

    ';'  reduce using rule 10 (varList)
    ','  reduce using rule 10 (varList)


State 13

   14 funcDecl: TYPE ID $@1 . arguments $@2 '{' funcBody '}'

    '('  shift, and go to state 16

    arguments  go to state 17


State 14

    7 varDecl: TYPE varList ';' .

    $end  reduce using rule 7 (varDecl)
    TYPE  reduce using rule 7 (varDecl)


State 15

    9 varList: varList ',' . new_id

    ID  shift, and go to state 18

    new_id  go to state 19


State 16

   15 arguments: '(' . ')'
   16          | '(' . argsList ')'
   17          | '(' . error ')'

    error  shift, and go to state 20
    TYPE   shift, and go to state 21
    ')'    shift, and go to state 22

    argsList  go to state 23
    arg       go to state 24


State 17

   14 funcDecl: TYPE ID $@1 arguments . $@2 '{' funcBody '}'

    '{'  reduce using rule 13 ($@2)

    $@2  go to state 25


State 18

   11 new_id: ID .

    ';'  reduce using rule 11 (new_id)
    ','  reduce using rule 11 (new_id)


State 19

    9 varList: varList ',' new_id .

    ';'  reduce using rule 9 (varList)
    ','  reduce using rule 9 (varList)


State 20

   17 arguments: '(' error . ')'

    ')'  shift, and go to state 26


State 21

   20 arg: TYPE . ID

    ID  shift, and go to state 27


State 22

   15 arguments: '(' ')' .

    '{'  reduce using rule 15 (arguments)


State 23

   16 arguments: '(' argsList . ')'
   18 argsList: argsList . ',' arg

    ','  shift, and go to state 28
    ')'  shift, and go to state 29


State 24

   19 argsList: arg .

    ','  reduce using rule 19 (argsList)
    ')'  reduce using rule 19 (argsList)


State 25

   14 funcDecl: TYPE ID $@1 arguments $@2 . '{' funcBody '}'

    '{'  shift, and go to state 30


State 26

   17 arguments: '(' error ')' .

    '{'  reduce using rule 17 (arguments)


State 27

   20 arg: TYPE ID .

    ','  reduce using rule 20 (arg)
    ')'  reduce using rule 20 (arg)


State 28

   18 argsList: argsList ',' . arg

    TYPE  shift, and go to state 21

    arg  go to state 31


State 29

   16 arguments: '(' argsList ')' .

    '{'  reduce using rule 16 (arguments)


State 30

   14 funcDecl: TYPE ID $@1 arguments $@2 '{' . funcBody '}'

    error    reduce using rule 21 (funcBody)
    TYPE     reduce using rule 21 (funcBody)
    SETOP    reduce using rule 21 (funcBody)
    ARTOP1   reduce using rule 21 (funcBody)
    ID       reduce using rule 21 (funcBody)
    IF       reduce using rule 21 (funcBody)
    FOR      reduce using rule 21 (funcBody)
    RETURN   reduce using rule 21 (funcBody)
    FORALL   reduce using rule 21 (funcBody)
    IS_SET   reduce using rule 21 (funcBody)
    EXISTS   reduce using rule 21 (funcBody)
    NEG      reduce using rule 21 (funcBody)
    READ     reduce using rule 21 (funcBody)
    WRITE    reduce using rule 21 (funcBody)
    WRITELN  reduce using rule 21 (funcBody)
    INTEGER  reduce using rule 21 (funcBody)
    FLOAT    reduce using rule 21 (funcBody)
    EMPTY    reduce using rule 21 (funcBody)
    ';'      reduce using rule 21 (funcBody)
    '}'      reduce using rule 21 (funcBody)
    '('      reduce using rule 21 (funcBody)

    funcBody  go to state 32


State 31

   18 argsList: argsList ',' arg .

    ','  reduce using rule 18 (argsList)
    ')'  reduce using rule 18 (argsList)


State 32

   14 funcDecl: TYPE ID $@1 arguments $@2 '{' funcBody . '}'
   22 funcBody: funcBody . varDecl
   23         | funcBody . stmt

    error    shift, and go to state 33
    TYPE     shift, and go to state 34
    SETOP    shift, and go to state 35
    ARTOP1   shift, and go to state 36
    ID       shift, and go to state 37
    IF       shift, and go to state 38
    FOR      shift, and go to state 39
    RETURN   shift, and go to state 40
    FORALL   shift, and go to state 41
    IS_SET   shift, and go to state 42
    EXISTS   shift, and go to state 43
    NEG      shift, and go to state 44
    READ     shift, and go to state 45
    WRITE    shift, and go to state 46
    WRITELN  shift, and go to state 47
    INTEGER  shift, and go to state 48
    FLOAT    shift, and go to state 49
    EMPTY    shift, and go to state 50
    ';'      shift, and go to state 51
    '}'      shift, and go to state 52
    '('      shift, and go to state 53

    varDecl      go to state 54
    stmt         go to state 55
    iterStmt     go to state 56
    condStmt     go to state 57
    returnStmt   go to state 58
    exprStmt     go to state 59
    expression   go to state 60
    assign       go to state 61
    var          go to state 62
    inExpr       go to state 63
    outExpr      go to state 64
    simpleExpr   go to state 65
    conjExpr     go to state 66
    disjExpr     go to state 67
    compExpr     go to state 68
    relExpr      go to state 69
    artExpr1     go to state 70
    artExpr2     go to state 71
    negExpr      go to state 72
    minusFactor  go to state 73
    factor       go to state 74
    constant     go to state 75
    call         go to state 76


State 33

   45 exprStmt: error .

    error    reduce using rule 45 (exprStmt)
    TYPE     reduce using rule 45 (exprStmt)
    SETOP    reduce using rule 45 (exprStmt)
    ARTOP1   reduce using rule 45 (exprStmt)
    ID       reduce using rule 45 (exprStmt)
    IF       reduce using rule 45 (exprStmt)
    FOR      reduce using rule 45 (exprStmt)
    RETURN   reduce using rule 45 (exprStmt)
    FORALL   reduce using rule 45 (exprStmt)
    IS_SET   reduce using rule 45 (exprStmt)
    EXISTS   reduce using rule 45 (exprStmt)
    NEG      reduce using rule 45 (exprStmt)
    READ     reduce using rule 45 (exprStmt)
    WRITE    reduce using rule 45 (exprStmt)
    WRITELN  reduce using rule 45 (exprStmt)
    INTEGER  reduce using rule 45 (exprStmt)
    FLOAT    reduce using rule 45 (exprStmt)
    EMPTY    reduce using rule 45 (exprStmt)
    ';'      reduce using rule 45 (exprStmt)
    '}'      reduce using rule 45 (exprStmt)
    '('      reduce using rule 45 (exprStmt)


State 34

    7 varDecl: TYPE . varList ';'
    8        | TYPE . error

    error  shift, and go to state 171
    ID     shift, and go to state 18

    varList  go to state 172
    new_id   go to state 12


State 35

   83 factor: SETOP . '(' simpleExpr ')'

    '('  shift, and go to state 77


State 36

   75 minusFactor: ARTOP1 . factor

    SETOP    shift, and go to state 35
    ID       shift, and go to state 173
    IS_SET   shift, and go to state 42
    EXISTS   shift, and go to state 43
    INTEGER  shift, and go to state 48
    FLOAT    shift, and go to state 49
    EMPTY    shift, and go to state 50
    '('      shift, and go to state 53

    var       go to state 78
    factor    go to state 79
    constant  go to state 75
    call      go to state 76


State 37

   52 var: ID .
   77 factor: ID .

    RELOP   reduce using rule 77 (factor)
    COMP    reduce using rule 77 (factor)
    ARTOP1  reduce using rule 77 (factor)
    ARTOP2  reduce using rule 77 (factor)
    IN      reduce using rule 77 (factor)
    DISJ    reduce using rule 77 (factor)
    CONJ    reduce using rule 77 (factor)
    ';'     reduce using rule 77 (factor)
    '('     reduce using rule 52 (var)
    '='     reduce using rule 52 (var)


State 38

   37 condStmt: IF . cond prepareScope body
   39         | IF . cond prepareScope body ELSE $@3 prepareScope body

    '('  shift, and go to state 80

    cond  go to state 81


State 39

   28 iterStmt: FOR . '(' exprStmt exprStmt ')' prepareScope body
   29         | FOR . '(' exprStmt exprStmt expression ')' prepareScope body
   32         | FOR . '(' error ')' prepareScope body

    '('  shift, and go to state 82


State 40

   43 returnStmt: RETURN . exprStmt

    error    shift, and go to state 33
    SETOP    shift, and go to state 35
    ARTOP1   shift, and go to state 36
    ID       shift, and go to state 37
    IS_SET   shift, and go to state 42
    EXISTS   shift, and go to state 43
    NEG      shift, and go to state 44
    READ     shift, and go to state 45
    WRITE    shift, and go to state 46
    WRITELN  shift, and go to state 47
    INTEGER  shift, and go to state 48
    FLOAT    shift, and go to state 49
    EMPTY    shift, and go to state 50
    ';'      shift, and go to state 51
    '('      shift, and go to state 53

    exprStmt     go to state 83
    expression   go to state 60
    assign       go to state 61
    var          go to state 62
    inExpr       go to state 63
    outExpr      go to state 64
    simpleExpr   go to state 65
    conjExpr     go to state 66
    disjExpr     go to state 67
    compExpr     go to state 68
    relExpr      go to state 69
    artExpr1     go to state 70
    artExpr2     go to state 71
    negExpr      go to state 72
    minusFactor  go to state 73
    factor       go to state 74
    constant     go to state 75
    call         go to state 76


State 41

   30 iterStmt: FORALL . '(' simpleExpr ')' prepareScope body
   31         | FORALL . '(' error ')' prepareScope body

    '('  shift, and go to state 84


State 42

   81 factor: IS_SET . '(' factor ')'

    '('  shift, and go to state 85


State 43

   82 factor: EXISTS . '(' simpleExpr ')'

    '('  shift, and go to state 86


State 44

   73 negExpr: NEG . negExpr

    SETOP    shift, and go to state 35
    ARTOP1   shift, and go to state 36
    ID       shift, and go to state 173
    IS_SET   shift, and go to state 42
    EXISTS   shift, and go to state 43
    NEG      shift, and go to state 44
    INTEGER  shift, and go to state 48
    FLOAT    shift, and go to state 49
    EMPTY    shift, and go to state 50
    '('      shift, and go to state 53

    var          go to state 78
    negExpr      go to state 87
    minusFactor  go to state 73
    factor       go to state 74
    constant     go to state 75
    call         go to state 76


State 45

   53 inExpr: READ . '(' var ')'

    '('  shift, and go to state 88


State 46

   54 outExpr: WRITE . '(' output ')'

    '('  shift, and go to state 89


State 47

   55 outExpr: WRITELN . '(' output ')'

    '('  shift, and go to state 90


State 48

   84 constant: INTEGER .

    RELOP   reduce using rule 84 (constant)
    COMP    reduce using rule 84 (constant)
    ARTOP1  reduce using rule 84 (constant)
    ARTOP2  reduce using rule 84 (constant)
    IN      reduce using rule 84 (constant)
    DISJ    reduce using rule 84 (constant)
    CONJ    reduce using rule 84 (constant)
    ';'     reduce using rule 84 (constant)


State 49

   85 constant: FLOAT .

    RELOP   reduce using rule 85 (constant)
    COMP    reduce using rule 85 (constant)
    ARTOP1  reduce using rule 85 (constant)
    ARTOP2  reduce using rule 85 (constant)
    IN      reduce using rule 85 (constant)
    DISJ    reduce using rule 85 (constant)
    CONJ    reduce using rule 85 (constant)
    ';'     reduce using rule 85 (constant)


State 50

   86 constant: EMPTY .

    RELOP   reduce using rule 86 (constant)
    COMP    reduce using rule 86 (constant)
    ARTOP1  reduce using rule 86 (constant)
    ARTOP2  reduce using rule 86 (constant)
    IN      reduce using rule 86 (constant)
    DISJ    reduce using rule 86 (constant)
    CONJ    reduce using rule 86 (constant)
    ';'     reduce using rule 86 (constant)


State 51

   46 exprStmt: ';' .

    error    reduce using rule 46 (exprStmt)
    TYPE     reduce using rule 46 (exprStmt)
    SETOP    reduce using rule 46 (exprStmt)
    ARTOP1   reduce using rule 46 (exprStmt)
    ID       reduce using rule 46 (exprStmt)
    IF       reduce using rule 46 (exprStmt)
    FOR      reduce using rule 46 (exprStmt)
    RETURN   reduce using rule 46 (exprStmt)
    FORALL   reduce using rule 46 (exprStmt)
    IS_SET   reduce using rule 46 (exprStmt)
    EXISTS   reduce using rule 46 (exprStmt)
    NEG      reduce using rule 46 (exprStmt)
    READ     reduce using rule 46 (exprStmt)
    WRITE    reduce using rule 46 (exprStmt)
    WRITELN  reduce using rule 46 (exprStmt)
    INTEGER  reduce using rule 46 (exprStmt)
    FLOAT    reduce using rule 46 (exprStmt)
    EMPTY    reduce using rule 46 (exprStmt)
    ';'      reduce using rule 46 (exprStmt)
    '}'      reduce using rule 46 (exprStmt)
    '('      reduce using rule 46 (exprStmt)


State 52

   14 funcDecl: TYPE ID $@1 arguments $@2 '{' funcBody '}' .

    $end  reduce using rule 14 (funcDecl)
    TYPE  reduce using rule 14 (funcDecl)


State 53

   78 factor: '(' . simpleExpr ')'

    SETOP    shift, and go to state 174
    ARTOP1   shift, and go to state 175
    ID       shift, and go to state 176
    IS_SET   shift, and go to state 177
    EXISTS   shift, and go to state 178
    NEG      shift, and go to state 179
    INTEGER  shift, and go to state 180
    FLOAT    shift, and go to state 181
    EMPTY    shift, and go to state 182
    '('      shift, and go to state 183

    var          go to state 184
    simpleExpr   go to state 91
    conjExpr     go to state 185
    disjExpr     go to state 186
    compExpr     go to state 187
    relExpr      go to state 188
    artExpr1     go to state 189
    artExpr2     go to state 190
    negExpr      go to state 191
    minusFactor  go to state 192
    factor       go to state 193
    constant     go to state 194
    call         go to state 195


State 54

   22 funcBody: funcBody varDecl .

    error    reduce using rule 22 (funcBody)
    TYPE     reduce using rule 22 (funcBody)
    SETOP    reduce using rule 22 (funcBody)
    ARTOP1   reduce using rule 22 (funcBody)
    ID       reduce using rule 22 (funcBody)
    IF       reduce using rule 22 (funcBody)
    FOR      reduce using rule 22 (funcBody)
    RETURN   reduce using rule 22 (funcBody)
    FORALL   reduce using rule 22 (funcBody)
    IS_SET   reduce using rule 22 (funcBody)
    EXISTS   reduce using rule 22 (funcBody)
    NEG      reduce using rule 22 (funcBody)
    READ     reduce using rule 22 (funcBody)
    WRITE    reduce using rule 22 (funcBody)
    WRITELN  reduce using rule 22 (funcBody)
    INTEGER  reduce using rule 22 (funcBody)
    FLOAT    reduce using rule 22 (funcBody)
    EMPTY    reduce using rule 22 (funcBody)
    ';'      reduce using rule 22 (funcBody)
    '}'      reduce using rule 22 (funcBody)
    '('      reduce using rule 22 (funcBody)


State 55

   23 funcBody: funcBody stmt .

    error    reduce using rule 23 (funcBody)
    TYPE     reduce using rule 23 (funcBody)
    SETOP    reduce using rule 23 (funcBody)
    ARTOP1   reduce using rule 23 (funcBody)
    ID       reduce using rule 23 (funcBody)
    IF       reduce using rule 23 (funcBody)
    FOR      reduce using rule 23 (funcBody)
    RETURN   reduce using rule 23 (funcBody)
    FORALL   reduce using rule 23 (funcBody)
    IS_SET   reduce using rule 23 (funcBody)
    EXISTS   reduce using rule 23 (funcBody)
    NEG      reduce using rule 23 (funcBody)
    READ     reduce using rule 23 (funcBody)
    WRITE    reduce using rule 23 (funcBody)
    WRITELN  reduce using rule 23 (funcBody)
    INTEGER  reduce using rule 23 (funcBody)
    FLOAT    reduce using rule 23 (funcBody)
    EMPTY    reduce using rule 23 (funcBody)
    ';'      reduce using rule 23 (funcBody)
    '}'      reduce using rule 23 (funcBody)
    '('      reduce using rule 23 (funcBody)


State 56

   26 stmt: iterStmt .

    error    reduce using rule 26 (stmt)
    TYPE     reduce using rule 26 (stmt)
    SETOP    reduce using rule 26 (stmt)
    ARTOP1   reduce using rule 26 (stmt)
    ID       reduce using rule 26 (stmt)
    IF       reduce using rule 26 (stmt)
    FOR      reduce using rule 26 (stmt)
    RETURN   reduce using rule 26 (stmt)
    FORALL   reduce using rule 26 (stmt)
    IS_SET   reduce using rule 26 (stmt)
    EXISTS   reduce using rule 26 (stmt)
    NEG      reduce using rule 26 (stmt)
    READ     reduce using rule 26 (stmt)
    WRITE    reduce using rule 26 (stmt)
    WRITELN  reduce using rule 26 (stmt)
    INTEGER  reduce using rule 26 (stmt)
    FLOAT    reduce using rule 26 (stmt)
    EMPTY    reduce using rule 26 (stmt)
    ';'      reduce using rule 26 (stmt)
    '}'      reduce using rule 26 (stmt)
    '('      reduce using rule 26 (stmt)


State 57

   27 stmt: condStmt .

    error    reduce using rule 27 (stmt)
    TYPE     reduce using rule 27 (stmt)
    SETOP    reduce using rule 27 (stmt)
    ARTOP1   reduce using rule 27 (stmt)
    ID       reduce using rule 27 (stmt)
    IF       reduce using rule 27 (stmt)
    FOR      reduce using rule 27 (stmt)
    RETURN   reduce using rule 27 (stmt)
    FORALL   reduce using rule 27 (stmt)
    IS_SET   reduce using rule 27 (stmt)
    EXISTS   reduce using rule 27 (stmt)
    NEG      reduce using rule 27 (stmt)
    READ     reduce using rule 27 (stmt)
    WRITE    reduce using rule 27 (stmt)
    WRITELN  reduce using rule 27 (stmt)
    INTEGER  reduce using rule 27 (stmt)
    FLOAT    reduce using rule 27 (stmt)
    EMPTY    reduce using rule 27 (stmt)
    ';'      reduce using rule 27 (stmt)
    '}'      reduce using rule 27 (stmt)
    '('      reduce using rule 27 (stmt)


State 58

   25 stmt: returnStmt .

    error    reduce using rule 25 (stmt)
    TYPE     reduce using rule 25 (stmt)
    SETOP    reduce using rule 25 (stmt)
    ARTOP1   reduce using rule 25 (stmt)
    ID       reduce using rule 25 (stmt)
    IF       reduce using rule 25 (stmt)
    FOR      reduce using rule 25 (stmt)
    RETURN   reduce using rule 25 (stmt)
    FORALL   reduce using rule 25 (stmt)
    IS_SET   reduce using rule 25 (stmt)
    EXISTS   reduce using rule 25 (stmt)
    NEG      reduce using rule 25 (stmt)
    READ     reduce using rule 25 (stmt)
    WRITE    reduce using rule 25 (stmt)
    WRITELN  reduce using rule 25 (stmt)
    INTEGER  reduce using rule 25 (stmt)
    FLOAT    reduce using rule 25 (stmt)
    EMPTY    reduce using rule 25 (stmt)
    ';'      reduce using rule 25 (stmt)
    '}'      reduce using rule 25 (stmt)
    '('      reduce using rule 25 (stmt)


State 59

   24 stmt: exprStmt .

    error    reduce using rule 24 (stmt)
    TYPE     reduce using rule 24 (stmt)
    SETOP    reduce using rule 24 (stmt)
    ARTOP1   reduce using rule 24 (stmt)
    ID       reduce using rule 24 (stmt)
    IF       reduce using rule 24 (stmt)
    FOR      reduce using rule 24 (stmt)
    RETURN   reduce using rule 24 (stmt)
    FORALL   reduce using rule 24 (stmt)
    IS_SET   reduce using rule 24 (stmt)
    EXISTS   reduce using rule 24 (stmt)
    NEG      reduce using rule 24 (stmt)
    READ     reduce using rule 24 (stmt)
    WRITE    reduce using rule 24 (stmt)
    WRITELN  reduce using rule 24 (stmt)
    INTEGER  reduce using rule 24 (stmt)
    FLOAT    reduce using rule 24 (stmt)
    EMPTY    reduce using rule 24 (stmt)
    ';'      reduce using rule 24 (stmt)
    '}'      reduce using rule 24 (stmt)
    '('      reduce using rule 24 (stmt)


State 60

   44 exprStmt: expression . ';'

    ';'  shift, and go to state 92


State 61

   47 expression: assign .

    ';'  reduce using rule 47 (expression)


State 62

   51 assign: var . '=' simpleExpr
   88 call: var . $@4 '(' params ')'

    '='  shift, and go to state 93

    '('  reduce using rule 87 ($@4)

    $@4  go to state 94


State 63

   48 expression: inExpr .

    ';'  reduce using rule 48 (expression)


State 64

   49 expression: outExpr .

    ';'  reduce using rule 49 (expression)


State 65

   50 expression: simpleExpr .
   59 simpleExpr: simpleExpr . IN conjExpr

    IN  shift, and go to state 95

    ';'  reduce using rule 50 (expression)


State 66

   60 simpleExpr: conjExpr .
   61 conjExpr: conjExpr . CONJ disjExpr

    CONJ  shift, and go to state 96

    IN   reduce using rule 60 (simpleExpr)
    ';'  reduce using rule 60 (simpleExpr)


State 67

   62 conjExpr: disjExpr .
   63 disjExpr: disjExpr . DISJ compExpr

    DISJ  shift, and go to state 97

    IN    reduce using rule 62 (conjExpr)
    CONJ  reduce using rule 62 (conjExpr)
    ';'   reduce using rule 62 (conjExpr)


State 68

   64 disjExpr: compExpr .
   65 compExpr: compExpr . COMP relExpr

    COMP  shift, and go to state 98

    IN    reduce using rule 64 (disjExpr)
    DISJ  reduce using rule 64 (disjExpr)
    CONJ  reduce using rule 64 (disjExpr)
    ';'   reduce using rule 64 (disjExpr)


State 69

   66 compExpr: relExpr .
   67 relExpr: relExpr . RELOP artExpr1

    RELOP  shift, and go to state 99

    COMP  reduce using rule 66 (compExpr)
    IN    reduce using rule 66 (compExpr)
    DISJ  reduce using rule 66 (compExpr)
    CONJ  reduce using rule 66 (compExpr)
    ';'   reduce using rule 66 (compExpr)


State 70

   68 relExpr: artExpr1 .
   69 artExpr1: artExpr1 . ARTOP1 artExpr2

    ARTOP1  shift, and go to state 100

    RELOP  reduce using rule 68 (relExpr)
    COMP   reduce using rule 68 (relExpr)
    IN     reduce using rule 68 (relExpr)
    DISJ   reduce using rule 68 (relExpr)
    CONJ   reduce using rule 68 (relExpr)
    ';'    reduce using rule 68 (relExpr)


State 71

   70 artExpr1: artExpr2 .
   71 artExpr2: artExpr2 . ARTOP2 negExpr

    ARTOP2  shift, and go to state 101

    RELOP   reduce using rule 70 (artExpr1)
    COMP    reduce using rule 70 (artExpr1)
    ARTOP1  reduce using rule 70 (artExpr1)
    IN      reduce using rule 70 (artExpr1)
    DISJ    reduce using rule 70 (artExpr1)
    CONJ    reduce using rule 70 (artExpr1)
    ';'     reduce using rule 70 (artExpr1)


State 72

   72 artExpr2: negExpr .

    RELOP   reduce using rule 72 (artExpr2)
    COMP    reduce using rule 72 (artExpr2)
    ARTOP1  reduce using rule 72 (artExpr2)
    ARTOP2  reduce using rule 72 (artExpr2)
    IN      reduce using rule 72 (artExpr2)
    DISJ    reduce using rule 72 (artExpr2)
    CONJ    reduce using rule 72 (artExpr2)
    ';'     reduce using rule 72 (artExpr2)


State 73

   74 negExpr: minusFactor .

    RELOP   reduce using rule 74 (negExpr)
    COMP    reduce using rule 74 (negExpr)
    ARTOP1  reduce using rule 74 (negExpr)
    ARTOP2  reduce using rule 74 (negExpr)
    IN      reduce using rule 74 (negExpr)
    DISJ    reduce using rule 74 (negExpr)
    CONJ    reduce using rule 74 (negExpr)
    ';'     reduce using rule 74 (negExpr)


State 74

   76 minusFactor: factor .

    RELOP   reduce using rule 76 (minusFactor)
    COMP    reduce using rule 76 (minusFactor)
    ARTOP1  reduce using rule 76 (minusFactor)
    ARTOP2  reduce using rule 76 (minusFactor)
    IN      reduce using rule 76 (minusFactor)
    DISJ    reduce using rule 76 (minusFactor)
    CONJ    reduce using rule 76 (minusFactor)
    ';'     reduce using rule 76 (minusFactor)


State 75

   79 factor: constant .
